--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2014-11-12T13:36:23Z" product-name="melos_rtb">
+	<file source-language="en" datatype="plaintext" original="messages" date="2014-11-12T15:30:25Z" product-name="melos_rtb">
 		<header/>
 		<body>
 			<trans-unit id="tx_melosrtb_domain_model_application">
@@ -27,8 +27,8 @@
 			<trans-unit id="tx_melosrtb_domain_model_application.code">
 				<source>Code</source>
 			</trans-unit>
-			<trans-unit id="tx_melosrtb_domain_model_application.component_uses">
-				<source>Component Uses</source>
+			<trans-unit id="tx_melosrtb_domain_model_application.systems">
+				<source>Systems</source>
 			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_system">
 				<source>System</source>
@@ -51,8 +51,11 @@
 			<trans-unit id="tx_melosrtb_domain_model_system.teaser">
 				<source>Teaser</source>
 			</trans-unit>
-			<trans-unit id="tx_melosrtb_domain_model_system.component_uses">
-				<source>Component Uses</source>
+			<trans-unit id="tx_melosrtb_domain_model_system.components">
+				<source>Components</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_system.applications">
+				<source>Applications</source>
 			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_component">
 				<source>Component</source>
@@ -75,8 +78,8 @@
 			<trans-unit id="tx_melosrtb_domain_model_component.description">
 				<source>Description</source>
 			</trans-unit>
-			<trans-unit id="tx_melosrtb_domain_model_component.component_uses">
-				<source>Component Uses</source>
+			<trans-unit id="tx_melosrtb_domain_model_component.systems">
+				<source>Systems</source>
 			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_color">
 				<source>Color</source>
@@ -113,18 +116,6 @@
 			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_article.code">
 				<source>Code</source>
-			</trans-unit>
-			<trans-unit id="tx_melosrtb_domain_model_componentuse">
-				<source>Component Use</source>
-			</trans-unit>
-			<trans-unit id="tx_melosrtb_domain_model_componentuse.system">
-				<source>System</source>
-			</trans-unit>
-			<trans-unit id="tx_melosrtb_domain_model_componentuse.application">
-				<source>Application</source>
-			</trans-unit>
-			<trans-unit id="tx_melosrtb_domain_model_componentuse.component">
-				<source>Component</source>
 			</trans-unit>
 		</body>
 	</file>
