--- a/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_system.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_system.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2014-11-12T13:36:23Z" product-name="melos_rtb">
+	<file source-language="en" datatype="plaintext" original="messages" date="2014-11-12T15:30:25Z" product-name="melos_rtb">
 		<header/>
 		<body>
 			<trans-unit id="name.description">
@@ -21,8 +21,11 @@
 			<trans-unit id="teaser.description">
 				<source>teaser</source>
 			</trans-unit>
-			<trans-unit id="component_uses.description">
-				<source>componentUses</source>
+			<trans-unit id="components.description">
+				<source>components</source>
+			</trans-unit>
+			<trans-unit id="applications.description">
+				<source>applications</source>
 			</trans-unit>
 		</body>
 	</file>
