--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2014-11-12T16:07:40Z" product-name="melos_rtb">
+	<file source-language="en" datatype="plaintext" original="messages" date="2014-11-19T11:19:46Z" product-name="melos_rtb">
 		<header/>
 		<body>
 			<trans-unit id="tx_melosrtb_domain_model_application">
@@ -27,6 +27,12 @@
 			<trans-unit id="tx_melosrtb_domain_model_application.code">
 				<source>Code</source>
 			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_application.sorting">
+				<source>Sorting</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_application.translation_parent">
+				<source>Translation Parent</source>
+			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_application.systems">
 				<source>Systems</source>
 			</trans-unit>
@@ -50,6 +56,9 @@
 			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_system.teaser">
 				<source>Teaser</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_system.sorting">
+				<source>Sorting</source>
 			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_system.components">
 				<source>Components</source>
@@ -78,6 +87,9 @@
 			<trans-unit id="tx_melosrtb_domain_model_component.description">
 				<source>Description</source>
 			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_component.sorting">
+				<source>Sorting</source>
+			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_component.systems">
 				<source>Systems</source>
 			</trans-unit>
@@ -90,6 +102,9 @@
 			<trans-unit id="tx_melosrtb_domain_model_color.code">
 				<source>Code</source>
 			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_color.sorting">
+				<source>Sorting</source>
+			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_kerning">
 				<source>Kerning</source>
 			</trans-unit>
@@ -98,6 +113,9 @@
 			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_kerning.code">
 				<source>Code</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_kerning.sorting">
+				<source>Sorting</source>
 			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_packagesize">
 				<source>Package Size</source>
@@ -108,6 +126,9 @@
 			<trans-unit id="tx_melosrtb_domain_model_packagesize.code">
 				<source>Code</source>
 			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_packagesize.sorting">
+				<source>Sorting</source>
+			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_article">
 				<source>Article</source>
 			</trans-unit>
@@ -116,6 +137,9 @@
 			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_article.code">
 				<source>Code</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_article.sorting">
+				<source>Sorting</source>
 			</trans-unit>
 		</body>
 	</file>
