--- a/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_application.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_application.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2014-11-12T16:07:40Z" product-name="melos_rtb">
+	<file source-language="en" datatype="plaintext" original="messages" date="2014-11-19T11:19:46Z" product-name="melos_rtb">
 		<header/>
 		<body>
 			<trans-unit id="name.description">
@@ -23,6 +23,12 @@
 			</trans-unit>
 			<trans-unit id="code.description">
 				<source>code</source>
+			</trans-unit>
+			<trans-unit id="sorting.description">
+				<source>sorting</source>
+			</trans-unit>
+			<trans-unit id="translation_parent.description">
+				<source>translationParent</source>
 			</trans-unit>
 			<trans-unit id="systems.description">
 				<source>systems</source>
