--- a/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_component.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_component.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2014-11-19T14:44:58Z" product-name="melos_rtb">
+	<file source-language="en" datatype="plaintext" original="messages" date="2014-11-19T16:12:13Z" product-name="melos_rtb">
 		<header/>
 		<body>
 			<trans-unit id="name.description">
@@ -29,6 +29,9 @@
 			</trans-unit>
 			<trans-unit id="systems.description">
 				<source>systems</source>
+			</trans-unit>
+			<trans-unit id="articles.description">
+				<source>articles</source>
 			</trans-unit>
 		</body>
 	</file>
