Added ArticleGroup, Attribute and some relations

--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2014-11-19T16:12:13Z" product-name="melos_rtb">
+	<file source-language="en" datatype="plaintext" original="messages" date="2014-11-20T11:38:26Z" product-name="melos_rtb">
 		<header/>
 		<body>
 			<trans-unit id="tx_melosrtb_domain_model_application">
@@ -99,8 +99,8 @@
 			<trans-unit id="tx_melosrtb_domain_model_component.systems">
 				<source>Systems</source>
 			</trans-unit>
-			<trans-unit id="tx_melosrtb_domain_model_component.articles">
-				<source>Articles</source>
+			<trans-unit id="tx_melosrtb_domain_model_component.articles_groups">
+				<source>Articles Groups</source>
 			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_color">
 				<source>Color</source>
@@ -117,6 +117,9 @@
 			<trans-unit id="tx_melosrtb_domain_model_color.l10n_parent">
 				<source>L10n Parent</source>
 			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_color.articles">
+				<source>Articles</source>
+			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_kerning">
 				<source>Kerning</source>
 			</trans-unit>
@@ -131,6 +134,9 @@
 			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_kerning.l10n_parent">
 				<source>L10n Parent</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_kerning.articles">
+				<source>Articles</source>
 			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_packagesize">
 				<source>Package Size</source>
@@ -147,23 +153,59 @@
 			<trans-unit id="tx_melosrtb_domain_model_packagesize.l10n_parent">
 				<source>L10n Parent</source>
 			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_articlegroup">
+				<source>Article Group</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_articlegroup.name">
+				<source>Name</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_articlegroup.code">
+				<source>Code</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_articlegroup.sorting">
+				<source>Sorting</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_articlegroup.l10n_parent">
+				<source>L10n Parent</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_articlegroup.component">
+				<source>Component</source>
+			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_article">
 				<source>Article</source>
 			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_article.name">
 				<source>Name</source>
 			</trans-unit>
-			<trans-unit id="tx_melosrtb_domain_model_article.code">
-				<source>Code</source>
+			<trans-unit id="tx_melosrtb_domain_model_article.number">
+				<source>Number</source>
 			</trans-unit>
-			<trans-unit id="tx_melosrtb_domain_model_article.sorting">
-				<source>Sorting</source>
+			<trans-unit id="tx_melosrtb_domain_model_article.specification">
+				<source>Specification</source>
 			</trans-unit>
-			<trans-unit id="tx_melosrtb_domain_model_article.l10n_parent">
-				<source>L10n Parent</source>
+			<trans-unit id="tx_melosrtb_domain_model_article.article_group">
+				<source>Article Group</source>
 			</trans-unit>
-			<trans-unit id="tx_melosrtb_domain_model_article.component">
-				<source>Component</source>
+			<trans-unit id="tx_melosrtb_domain_model_article.kerning">
+				<source>Kerning</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_article.color">
+				<source>Color</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_article.attributes">
+				<source>Attributes</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_attribute">
+				<source>Attribute</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_attribute.name">
+				<source>Name</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_attribute.value">
+				<source>Value</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_attribute.article">
+				<source>Article</source>
 			</trans-unit>
 		</body>
 	</file>
