--- a/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_attribute.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_attribute.xlf
@@ -3,11 +3,14 @@
 	<file source-language="en" datatype="plaintext" original="messages" date="2014-11-20T11:38:26Z" product-name="melos_rtb">
 		<header/>
 		<body>
-			<trans-unit id="mlang_tabs_tab">
-				<source>Import</source>
+			<trans-unit id="name.description">
+				<source>name</source>
 			</trans-unit>
-			<trans-unit id="mlang_labels_tabdescr">
-				<source>Ready to Build - Import</source>
+			<trans-unit id="value.description">
+				<source>value</source>
+			</trans-unit>
+			<trans-unit id="article.description">
+				<source>article</source>
 			</trans-unit>
 		</body>
 	</file>
