--- a/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_article.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_article.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2014-11-20T11:38:26Z" product-name="melos_rtb">
+	<file source-language="en" datatype="plaintext" original="messages" date="2014-11-20T15:37:50Z" product-name="melos_rtb">
 		<header/>
 		<body>
 			<trans-unit id="name.description">
@@ -11,6 +11,9 @@
 			</trans-unit>
 			<trans-unit id="specification.description">
 				<source>specification</source>
+			</trans-unit>
+			<trans-unit id="l10n_parent.description">
+				<source>l10nParent</source>
 			</trans-unit>
 			<trans-unit id="article_group.description">
 				<source>articleGroup</source>
@@ -23,6 +26,9 @@
 			</trans-unit>
 			<trans-unit id="attributes.description">
 				<source>attributes</source>
+			</trans-unit>
+			<trans-unit id="component.description">
+				<source>component</source>
 			</trans-unit>
 		</body>
 	</file>
