--- a/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_article.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_article.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2014-11-20T15:37:50Z" product-name="melos_rtb">
+	<file source-language="en" datatype="plaintext" original="messages" date="2014-11-20T17:15:55Z" product-name="melos_rtb">
 		<header/>
 		<body>
 			<trans-unit id="name.description">
@@ -29,6 +29,9 @@
 			</trans-unit>
 			<trans-unit id="component.description">
 				<source>component</source>
+			</trans-unit>
+			<trans-unit id="system.description">
+				<source>system</source>
 			</trans-unit>
 		</body>
 	</file>
