--- a/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_kerning.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_kerning.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2014-11-20T17:15:55Z" product-name="melos_rtb">
+	<file source-language="en" datatype="plaintext" original="messages" date="2014-12-01T11:06:32Z" product-name="melos_rtb">
 		<header/>
 		<body>
 			<trans-unit id="name.description">
@@ -17,6 +17,9 @@
 			</trans-unit>
 			<trans-unit id="articles.description">
 				<source>articles</source>
+			</trans-unit>
+			<trans-unit id="components.description">
+				<source>components</source>
 			</trans-unit>
 		</body>
 	</file>
