--- a/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_article.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_article.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2014-11-20T17:15:55Z" product-name="melos_rtb">
+	<file source-language="en" datatype="plaintext" original="messages" date="2014-12-10T13:53:17Z" product-name="melos_rtb">
 		<header/>
 		<body>
 			<trans-unit id="name.description">
@@ -17,6 +17,11 @@
 			</trans-unit>
 			<trans-unit id="article_group.description">
 				<source>articleGroup</source>
+			<trans-unit id="image.description">
+				<source>image</source>
+			</trans-unit>
+			<trans-unit id="detail.description">
+				<source>detail</source>
 			</trans-unit>
 			<trans-unit id="kerning.description">
 				<source>kerning</source>
