--- a/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_color.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_color.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2014-12-01T11:06:32Z" product-name="melos_rtb">
+	<file source-language="en" datatype="plaintext" original="messages" date="2014-12-10T13:53:17Z" product-name="melos_rtb">
 		<header/>
 		<body>
 			<trans-unit id="name.description">
@@ -14,6 +14,9 @@
 			</trans-unit>
 			<trans-unit id="l10n_parent.description">
 				<source>l10nParent</source>
+			</trans-unit>
+			<trans-unit id="image.description">
+				<source>image</source>
 			</trans-unit>
 			<trans-unit id="articles.description">
 				<source>articles</source>
