Improved Component + System view

--- a/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_article.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_article.xlf
@@ -17,6 +17,7 @@
 			</trans-unit>
 			<trans-unit id="article_group.description">
 				<source>articleGroup</source>
+			</trans-unit>
 			<trans-unit id="image.description">
 				<source>image</source>
 			</trans-unit>
