--- a/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_system.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_system.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2014-12-10T13:53:17Z" product-name="melos_rtb">
+	<file source-language="en" datatype="plaintext" original="messages" date="2014-12-17T11:15:39Z" product-name="melos_rtb">
 		<header/>
 		<body>
 			<trans-unit id="name.description">
@@ -14,6 +14,15 @@
 			</trans-unit>
 			<trans-unit id="image.description">
 				<source>image</source>
+			</trans-unit>
+			<trans-unit id="mobile_image.description">
+				<source>mobileImage</source>
+			</trans-unit>
+			<trans-unit id="cross_section.description">
+				<source>crossSection</source>
+			</trans-unit>
+			<trans-unit id="cross_section_mobile.description">
+				<source>crossSectionMobile</source>
 			</trans-unit>
 			<trans-unit id="thumbnail.description">
 				<source>thumbnail</source>
