--- a/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_article.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_article.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2014-12-17T11:15:39Z" product-name="melos_rtb">
+	<file source-language="en" datatype="plaintext" original="messages" date="2014-12-22T11:31:04Z" product-name="melos_rtb">
 		<header/>
 		<body>
 			<trans-unit id="name.description">
@@ -21,8 +21,8 @@
 			<trans-unit id="image.description">
 				<source>image</source>
 			</trans-unit>
-			<trans-unit id="imageMobile.description">
-				<source>image mobile</source>
+			<trans-unit id="image_mobile.description">
+				<source>imageMobile</source>
 			</trans-unit>
 			<trans-unit id="detail.description">
 				<source>detail</source>
