--- a/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_system.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_system.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2014-12-17T11:41:25Z" product-name="melos_rtb">
+	<file source-language="en" datatype="plaintext" original="messages" date="2014-12-22T11:31:04Z" product-name="melos_rtb">
 		<header/>
 		<body>
 			<trans-unit id="name.description">
@@ -44,6 +44,9 @@
 			</trans-unit>
 			<trans-unit id="articles.description">
 				<source>articles</source>
+			</trans-unit>
+			<trans-unit id="cross_sections.description">
+				<source>crossSections</source>
 			</trans-unit>
 		</body>
 	</file>
