--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2014-12-17T11:41:25Z" product-name="melos_rtb">
+	<file source-language="en" datatype="plaintext" original="messages" date="2014-12-22T11:31:04Z" product-name="melos_rtb">
 		<header/>
 		<body>
 			<trans-unit id="tx_melosrtb_domain_model_application">
@@ -83,6 +83,9 @@
 			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_system.articles">
 				<source>Articles</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_system.cross_sections">
+				<source>Cross Sections</source>
 			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_component">
 				<source>Component</source>
@@ -236,6 +239,27 @@
 			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_attribute.article">
 				<source>Article</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_crosssection">
+				<source>Cross Section</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_crosssection.name">
+				<source>Name</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_crosssection.code">
+				<source>Code</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_crosssection.image">
+				<source>Image</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_crosssection.image_mobile">
+				<source>Image Mobile</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_crosssection.system">
+				<source>System</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_crosssection.color">
+				<source>Color</source>
 			</trans-unit>
 		</body>
 	</file>
