--- a/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_system.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_system.xlf
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2014-12-22T11:31:04Z" product-name="melos_rtb">
+	<file source-language="en" datatype="plaintext" original="messages" date="2014-12-22T13:17:49Z" product-name="melos_rtb">
 		<header/>
 		<body>
 			<trans-unit id="name.description">
 				<source>name</source>
+			</trans-unit>
+			<trans-unit id="subtitle.description">
+				<source>subtitle</source>
 			</trans-unit>
 			<trans-unit id="code.description">
 				<source>code</source>
