Updated domain model

--- a/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_component.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_component.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2014-12-22T13:17:49Z" product-name="melos_rtb">
+	<file source-language="en" datatype="plaintext" original="messages" date="2015-01-12T10:39:09Z" product-name="melos_rtb">
 		<header/>
 		<body>
 			<trans-unit id="name.description">
@@ -23,6 +23,9 @@
 			</trans-unit>
 			<trans-unit id="teaser.description">
 				<source>teaser</source>
+			</trans-unit>
+			<trans-unit id="description_header.description">
+				<source>descriptionHeader</source>
 			</trans-unit>
 			<trans-unit id="description.description">
 				<source>description</source>
@@ -47,6 +50,9 @@
 			</trans-unit>
 			<trans-unit id="children.description">
 				<source>children</source>
+			</trans-unit>
+			<trans-unit id="colors.description">
+				<source>colors</source>
 			</trans-unit>
 		</body>
 	</file>
