--- a/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_system.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_system.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2014-12-22T13:17:49Z" product-name="melos_rtb">
+	<file source-language="en" datatype="plaintext" original="messages" date="2015-01-12T10:39:09Z" product-name="melos_rtb">
 		<header/>
 		<body>
 			<trans-unit id="name.description">
@@ -12,8 +12,14 @@
 			<trans-unit id="code.description">
 				<source>code</source>
 			</trans-unit>
+			<trans-unit id="description_header.description">
+				<source>descriptionHeader</source>
+			</trans-unit>
 			<trans-unit id="description.description">
 				<source>description</source>
+			</trans-unit>
+			<trans-unit id="teaser.description">
+				<source>teaser</source>
 			</trans-unit>
 			<trans-unit id="image.description">
 				<source>image</source>
@@ -30,14 +36,29 @@
 			<trans-unit id="thumbnail.description">
 				<source>thumbnail</source>
 			</trans-unit>
-			<trans-unit id="teaser.description">
-				<source>teaser</source>
+			<trans-unit id="requirement.description">
+				<source>requirement</source>
 			</trans-unit>
-			<trans-unit id="sorting.description">
-				<source>sorting</source>
+			<trans-unit id="cost.description">
+				<source>cost</source>
+			</trans-unit>
+			<trans-unit id="synonm.description">
+				<source>synonm</source>
+			</trans-unit>
+			<trans-unit id="feature_description.description">
+				<source>featureDescription</source>
+			</trans-unit>
+			<trans-unit id="application.description">
+				<source>application</source>
+			</trans-unit>
+			<trans-unit id="standard.description">
+				<source>standard</source>
 			</trans-unit>
 			<trans-unit id="l10n_parent.description">
 				<source>l10nParent</source>
+			</trans-unit>
+			<trans-unit id="sorting.description">
+				<source>sorting</source>
 			</trans-unit>
 			<trans-unit id="components.description">
 				<source>components</source>
