--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <xliff version="1.0">
-	<file source-language="en" datatype="plaintext" original="messages" date="2014-12-22T13:17:49Z" product-name="melos_rtb">
+	<file source-language="en" datatype="plaintext" original="messages" date="2015-01-12T10:39:09Z" product-name="melos_rtb">
 		<header/>
 		<body>
 			<trans-unit id="tx_melosrtb_domain_model_application">
@@ -54,8 +54,14 @@
 			<trans-unit id="tx_melosrtb_domain_model_system.code">
 				<source>Code</source>
 			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_system.description_header">
+				<source>Description Header</source>
+			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_system.description">
 				<source>Description</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_system.teaser">
+				<source>Teaser</source>
 			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_system.image">
 				<source>Image</source>
@@ -72,14 +78,29 @@
 			<trans-unit id="tx_melosrtb_domain_model_system.thumbnail">
 				<source>Thumbnail</source>
 			</trans-unit>
-			<trans-unit id="tx_melosrtb_domain_model_system.teaser">
-				<source>Teaser</source>
+			<trans-unit id="tx_melosrtb_domain_model_system.requirement">
+				<source>Requirement</source>
 			</trans-unit>
-			<trans-unit id="tx_melosrtb_domain_model_system.sorting">
-				<source>Sorting</source>
+			<trans-unit id="tx_melosrtb_domain_model_system.cost">
+				<source>Cost</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_system.synonm">
+				<source>Synonm</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_system.feature_description">
+				<source>Feature Description</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_system.application">
+				<source>Application</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_system.standard">
+				<source>Standard</source>
 			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_system.l10n_parent">
 				<source>L10n Parent</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_system.sorting">
+				<source>Sorting</source>
 			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_system.components">
 				<source>Components</source>
@@ -117,6 +138,9 @@
 			<trans-unit id="tx_melosrtb_domain_model_component.teaser">
 				<source>Teaser</source>
 			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_component.description_header">
+				<source>Description Header</source>
+			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_component.description">
 				<source>Description</source>
 			</trans-unit>
@@ -140,6 +164,9 @@
 			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_component.children">
 				<source>Children</source>
+			</trans-unit>
+			<trans-unit id="tx_melosrtb_domain_model_component.colors">
+				<source>Colors</source>
 			</trans-unit>
 			<trans-unit id="tx_melosrtb_domain_model_color">
 				<source>Color</source>
