updated system view

--- a/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_system.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_system.xlf
@@ -42,8 +42,8 @@
 			<trans-unit id="cost.description">
 				<source>cost</source>
 			</trans-unit>
-			<trans-unit id="synonm.description">
-				<source>synonm</source>
+			<trans-unit id="synonym.description">
+				<source>synonym</source>
 			</trans-unit>
 			<trans-unit id="feature_description.description">
 				<source>featureDescription</source>
